# camera_calibration_OpenCV

./: .gitignore  LICENSE  README.md
monocular_calibration/: CMakeLists.txt
monocular_calibration/src/: calibration.cpp
rgbdodometry/: CMakeLists.txt
rgbdodometry/src/: rgbdodometry.cpp
stereo_calibration/: CMakeLists.txt
stereo_calibration/chessboard_images_VIsensor_ICSL/: stereo_calib.xml
stereo_calibration/chessboard_images_examples/: stereo_calib.xml
stereo_calibration/src/: stereo_calib.cpp
